--- a/package.json
+++ b/package.json
@@ -20,11 +20,13 @@
     "babel-preset-env": "^1.6.0",
     "babel-preset-react": "^6.24.1",
     "bcrypt-nodejs": "0.0.3",
+    "body-parser": "^1.18.2",
     "css-loader": "^0.28.7",
     "express": "^4.16.2",
+    "jwt-simple": "^0.5.1",
     "live-server": "^1.2.0",
-    "morgan": "^1.9.0",
     "material-ui": "^0.20.0",
+    "morgan": "^1.9.0",
     "node-sass": "^4.5.3",
     "pg": "^7.4.0",
     "pg-promise": "^7.3.2",
