--- a/.babelrc
+++ b/.babelrc
@@ -1,6 +1,6 @@
 {
   // Presets are preset packages of plugins
-  "presets": ["env", "react"],
+  "presets": ["env", "react","stage-2"],
   // Plugins are modules for transpiling
   "plugins": ["transform-class-properties"]
 }
