--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
   },
   "devDependencies": {
     "axios": "^0.17.1",
+    "babel-preset-stage-2": "^6.24.1",
     "redux-devtools-extension": "^2.13.2",
     "webpack-dev-server": "^2.8.2"
   }
